<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="#eee"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp"
            app:cardMaxElevation="5dp"
            app:cardPreventCornerOverlap="true"
            app:contentPadding="5dp">

            <CheckBox
                android:id="@+id/ucbehavior_cb_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:checked="true"
                android:gravity="center"
                android:text="头像模式/标题模式"
                android:textAppearance="@style/Toolbar.TitleTextStyle" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="#eee"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp"
            app:cardMaxElevation="5dp"
            app:cardPreventCornerOverlap="true"
            app:contentPadding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|left"
                android:lineSpacingExtra="1.5dp"
                android:lineSpacingMultiplier="1.2"
                android:padding="5dp"
                android:text="@string/test_content1" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="#eee"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp"
            app:cardMaxElevation="5dp"
            app:cardPreventCornerOverlap="true"
            app:contentPadding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|left"
                android:lineSpacingExtra="1.5dp"
                android:lineSpacingMultiplier="1.2"
                android:padding="5dp"
                android:text="@string/test_content2" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="#eee"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp"
            app:cardMaxElevation="5dp"
            app:cardPreventCornerOverlap="true"
            app:contentPadding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|left"
                android:lineSpacingExtra="1.5dp"
                android:lineSpacingMultiplier="1.2"
                android:padding="5dp"
                android:text="@string/test_content3" />

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="#eee"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp"
            app:cardMaxElevation="5dp"
            app:cardPreventCornerOverlap="true"
            app:contentPadding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|left"
                android:lineSpacingExtra="1.5dp"
                android:lineSpacingMultiplier="1.2"
                android:padding="5dp"
                android:text="@string/test_content4" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="#eee"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp"
            app:cardMaxElevation="5dp"
            app:cardPreventCornerOverlap="true"
            app:contentPadding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|left"
                android:lineSpacingExtra="1.5dp"
                android:lineSpacingMultiplier="1.2"
                android:padding="5dp"
                android:text="@string/test_content5" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="#eee"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp"
            app:cardMaxElevation="5dp"
            app:cardPreventCornerOverlap="true"
            app:contentPadding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|left"
                android:lineSpacingExtra="1.5dp"
                android:lineSpacingMultiplier="1.2"
                android:padding="5dp"
                android:text="@string/test_content6" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="#eee"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp"
            app:cardMaxElevation="5dp"
            app:cardPreventCornerOverlap="true"
            app:contentPadding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|left"
                android:lineSpacingExtra="1.5dp"
                android:lineSpacingMultiplier="1.2"
                android:padding="5dp"
                android:text="@string/test_content7" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="#eee"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp"
            app:cardMaxElevation="5dp"
            app:cardPreventCornerOverlap="true"
            app:contentPadding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|left"
                android:lineSpacingExtra="1.5dp"
                android:lineSpacingMultiplier="1.2"
                android:padding="5dp"
                android:text="@string/test_content8" />

        </android.support.v7.widget.CardView>

    </LinearLayout>


</merge>