<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar_actionbar"
            layout="@layout/layout_actionbar_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.AppBarLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/bottomsheet_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="80dp"
        android:foreground="@mipmap/ic_expand_more_black_18dp" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/bottomsheet_nestedscrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/textColorPrimary"
        android:fitsSystemWindows="true"
        app:behavior_hideable="true"
        app:behavior_peekHeight="45dp"
        app:layout_behavior="@string/bottom_sheet_behavior">


        <!--<include-->
        <!--layout="@layout/fragment_dialogfragment"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content" />-->

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/textColorPrimary">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="NestedScrollView peekHeight = 45dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dialogfragment_tv_tips"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="登录"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.2" />

            <TextView
                android:id="@+id/dialogfragment_tv_name"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center_vertical|right"
                android:text="姓名："
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="@id/dialogfragment_et_name"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintHorizontal_weight="0.35"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/dialogfragment_et_name"
                app:layout_constraintTop_toBottomOf="@id/dialogfragment_tv_tips" />

            <EditText
                android:id="@+id/dialogfragment_et_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/hint_inputname"
                android:maxLength="10"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintHorizontal_weight="0.65"
                app:layout_constraintLeft_toRightOf="@id/dialogfragment_tv_name"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dialogfragment_tv_tips" />

            <TextView
                android:id="@+id/dialogfragment_tv_pwd"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:gravity="bottom|right"
                android:text="密码："
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="@id/dialogfragment_et_pwd"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintHorizontal_weight="0.35"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/dialogfragment_et_pwd"
                app:layout_constraintTop_toBottomOf="@id/dialogfragment_tv_name" />

            <EditText
                android:id="@+id/dialogfragment_et_pwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/hint_inputpwd"
                android:maxLength="6"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintHorizontal_weight="0.65"
                app:layout_constraintLeft_toRightOf="@id/dialogfragment_tv_pwd"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dialogfragment_tv_name" />


            <android.support.design.widget.TextInputEditText
                android:id="@+id/dialogfragment_textinputet_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_inputaddress"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dialogfragment_et_pwd" />

            <Button
                android:id="@+id/dialogfragment_btn_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/round_corner_selector"
                android:gravity="center"
                android:text="@android:string/ok"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dialogfragment_textinputet_address" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>